tests/it/snapshots/it__args__errors_on_nonexistent_config.snap
---
source: tests/it/args.rs
expression: "config::validate_args(base).expect_err(\"args must have failed validation\")"
info:
  config_file_path: testdata/config/does_not_exist
  database_file_path: testdata/database/empty.sqlite
---
validate command line arguments
├╴at {source location}
│
├─▶ validate config file location
│   ╰╴at {source location}
│
├─▶ failed to locate file
│   ╰╴at {source location}
│
├─▶ validate path
│   ├╴at {source location}
│   ├╴context: validate file: "testdata/config/does_not_exist"
│   ╰╴help: validate that you have access to the file and that it exists
│
╰─▶ No such file or directory (os error 2)
    ╰╴at {source location}
