tests/it/snapshots/it__args__errors_on_nonexistent_database.snap
---
source: tests/it/args.rs
expression: "config::validate_args(base).expect_err(\"args must have failed validation\")"
info:
  config_file_path: testdata/config/basic.yml
  database_file_path: testdata/database/does_not_exist
---
validate command line arguments
├╴at {source location}
│
├─▶ validate database file location
│   ╰╴at {source location}
│
├─▶ failed to locate file
│   ╰╴at {source location}
│
├─▶ validate path
│   ├╴at {source location}
│   ├╴context: validate file: "testdata/database/does_not_exist"
│   ╰╴help: validate that you have access to the file and that it exists
│
╰─▶ No such file or directory (os error 2)
    ╰╴at {source location}
