tests/it/snapshots/it__args__infers_db_path_failing_config.snap
---
source: tests/it/args.rs
expression: err
info:
  config_file_path: ""
  database_file_path: ~
  data_root: ~
---
locate database file
├╴at {source location}
├╴help: discovery is disabled via 'DISABLE_FILE_DISCOVERY' env var
╰╴context: Usually in this case Broker assumes the DB path to be next to the config file path,
  but the config path's parent could not be determined and so the db path was unable
  to be constructed.
